objects/ortoo_qra__Member_Lookup_Rules__c.object
<CustomObject>
    <description>This object serves as a 1-Many mapping with User object. Attributes (fields) can be added to this object and later used by Q-assign configuration to run various types of matching rules while distributing records (such as Leads, Cases).</description>
    <fields>
        <fullName>RSC_ServiceType__c</fullName>
        <description>This field stores value of Service Type.</description>
        <label>Service Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_Teams__c</fullName>
        <description>This field stores value of Team.</description>
        <label>Teams</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__User_To_Match__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User that each rule record represents and matches to. This is the default field that ships with Q-assign for this purpose, but other fields can be used instead.</description>
        <inlineHelpText>The User that each rule record represents and matches to. This is the default field that ships with Q-assign for this purpose, but other fields can be used instead.</inlineHelpText>
        <label>User To Match</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Q_assign_Member_Lookup_Rules_to_Match</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Q-assign Member Lookup Rules</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RSC_ServiceType__c</columns>
        <columns>RSC_Teams__c</columns>
        <columns>ortoo_qra__User_To_Match__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Q-assign Member Lookup Rules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>